Fix #3896: Top menu dropdown double border on focus/hover

--- a/static/less/topbar.less
+++ b/static/less/topbar.less
@@ -164,7 +164,7 @@
       }
     }
   }
-  
+
   .dropdown-footer {
     margin: 10px 10px 5px;
   }
@@ -255,7 +255,7 @@
     form {
       margin: 10px;
     }
-    
+
     .search-reset {
       position: absolute;
       color: #BFBFBF;
@@ -292,7 +292,7 @@
       border-top-color: @text-color-secondary;
     }
   }
-    
+
   .nav > li.active > a {
     min-height: 47px;
   }
@@ -317,13 +317,12 @@
     padding-top: 15px;
   }
   .nav > li > a:hover,
-  .nav .open > a,
   .nav > li.active {
     border-bottom: 3px solid @info;
     background-color: @background-color-secondary;
     color: @text-color-highlight;
   }
-  .nav > li.active > a:hover {
+  .nav > li.active > a:hover, .nav > li.active > a:focus {
     border-bottom: none;
   }
   #space-menu-dropdown li > ul > li > a > .media .media-body p {
